@@ -1,3 +1,4 @@
+Removed brownian motion randomness, added in initial velocity
 # 0.00.04 (65350) Jun 21, 2012
 # 0.00.03 (64262) May 18, 2012
 # 0.00.02 (64098) May 10, 2012
